--- a/public/index.html
+++ b/public/index.html
@@ -77,9 +77,9 @@
       <nav>
         <ul>
           <!-- <li><a href="#">Home</a></li> -->
-          <li><a href="why.html" onclick="createAnalyticsEvent({eventID: 'navWhyClicked', page: 'home'})">Why Lyrn</a></li>
-          <li><a href="team.html" onclick="createAnalyticsEvent({eventID: 'navTeamClicked', page: 'home'})">Our Team</a></li>
-          <li><a href="pricing.html" onclick="createAnalyticsEvent({eventID: 'navPricingClicked', page: 'home'})">Pricing</a></li>
+          <li><a href="why.html" onclick="createAnalyticsEvent({eventID: 'navWhyClicked'})">Why Lyrn</a></li>
+          <li><a href="team.html" onclick="createAnalyticsEvent({eventID: 'navTeamClicked'})">Our Team</a></li>
+          <li><a href="pricing.html" onclick="createAnalyticsEvent({eventID: 'navPricingClicked'})">Pricing</a></li>
           <!-- <li><a href="sign-in.html">Sign In</a></li> -->
           <!-- <li><a class="enroll" href="enroll.html">Get Started</a></li> -->
           <!-- <li><a href="enroll.html">Enroll</a></li> -->
@@ -193,7 +193,7 @@
         <div class="hero__intro">
           <h1>Advanced Data Driven Tutoring</h1>
           <h4>ACT Prep and Subject Tutoring with <a href="why.html">Adaptive Learning Intelligence</a></h4>
-          <div><a class="hero__button" href="pricing.html#program_selector" onclick="createAnalyticsEvent({eventID: 'heroButtonClicked', page: 'home'})">Get 2 <b>FREE</b> hours of ACT Prep</a></div>
+          <div><a class="hero__button" href="pricing.html#program_preview" onclick="createAnalyticsEvent({eventID: 'heroButtonClicked'})">Get 2 <b>FREE</b> hours of ACT Prep</a></div>
         </div>
         <!-- <div class="hero__body">
             <img src="Images/Lyrn_hero_section_image.png" alt="Adaptive Learning in action">
@@ -216,7 +216,7 @@
 
       <section class="questionnaire">
         <div class="progress">
-          <p><span id="progress_number">1</span> out of 5</p>
+          <p><span id="progress_number">1</span> out of 6</p>
           <div class="bar-wrapper">
             <div class="bar-fill" style="width: 12.5%;" id="progress_fill"></div>
           </div>
@@ -324,6 +324,14 @@
             </div>
           </div>
           <button class="back" onclick="goBackAQuestion()">Back</button>
+        </div>
+
+        <div class="panel">
+          <div class="question" id="question_8">
+            <h3 class="text">We are working on your personalized program and will send it to you as soon as we can.</h3>
+            <h3>In the mean time, you can check out our other programs by visting our <a href="pricing.html" onclick="createAnalyticsEvent({eventID: 'questionnairePricingClicked'})">pricing page</a>.</h3>
+          </div>
+          <button class="back" onclick="resetQuestionnaire()">Start Over</button>
         </div>
       </section>
   
@@ -467,13 +475,13 @@
           <p>or let us know a little more about you and we will get back to you</p>
           <form action="" id="contactForm">
             <label for="name">First and Last Name</label>
-            <input type="text" name="name" id="name" required>
+            <input type="text" name="name" id="name" onchange="createAnalyticsEvent({eventID: 'contactFormNameChanged'})" required>
             <label for="email">Email Address</label>
-            <input type="email" name="email" id="email" required>
+            <input type="email" name="email" id="email" onchange="createAnalyticsEvent({eventID: 'contactFormEmailChanged'})" required>
             <!-- <label for="number">Phone Number</label>
             <input type="tel" id="number" name="number"> -->
             <label for="course">Subject</label>
-            <div class="select-wrapper">
+            <div class="select-wrapper" onchange="createAnalyticsEvent({eventID: 'contactFormProgramChanged'})">
               <select name="course" id="course">
                 <option value="" disabled selected>Courses</option>
                 <option value="act">ACT Test Prep</option>
@@ -483,7 +491,7 @@
               </select>
             </div>
             <label for="message">Message</label>
-            <textarea name="message" id="message"></textarea>
+            <textarea name="message" id="message" onchange="createAnalyticsEvent({eventID: 'contactFormMessageChanged'})"></textarea>
             <input type="submit" value="Submit">
           </form>
         </div>
