--- a/public/pricing.html
+++ b/public/pricing.html
@@ -25,6 +25,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js" defer></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-functions.js" defer></script>
 
+    <!-- Calendly -->
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+
     <script src="Site Templates/generalFunctions.js" defer></script>
     <link rel="stylesheet" href="Site Templates/site-wide.css">
     <script src="pricing.js" defer></script>
@@ -39,7 +43,7 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <header class="nav-start">
-      <a href="index.html" onclick="createAnalyticsEvent({eventID: 'navHomeClicked', page: 'pricing'})" class="logo">
+      <a href="index.html" onclick="createAnalyticsEvent({eventID: 'navHomeClicked'})" class="logo">
         <svg class="logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="303 440 496 225" style="enable-background:new 0 0 1080 1080;" xml:space="preserve">
           <g>
             <polygon points="306.24,508.83 306.24,625.38 428.17,612.83 428.17,569.79 351.96,578.76 354.65,457.72 345.26,457.72 "/>
@@ -60,8 +64,8 @@
       <nav>
         <ul>
           <!-- <li><a href="index.html">Home</a></li> -->
-          <li><a href="why.html" onclick="createAnalyticsEvent({eventID: 'navWhyClicked', page: 'pricing'})">Why Lyrn</a></li>
-          <li><a href="team.html" onclick="createAnalyticsEvent({eventID: 'navTeamClicked', page: 'pricing'})">Our Team</a></li>
+          <li><a href="why.html" onclick="createAnalyticsEvent({eventID: 'navWhyClicked'})">Why Lyrn</a></li>
+          <li><a href="team.html" onclick="createAnalyticsEvent({eventID: 'navTeamClicked'})">Our Team</a></li>
           <li><a href="#">Pricing</a></li>
           <!-- <li><a href="sign-in.html">Sign In</a></li> -->
           <!-- <li><a class="enroll" href="enroll.html">Get Started</a></li> -->
@@ -265,7 +269,7 @@
         </div>
 
         <!-- previews -->
-        <div class="program previews open">
+        <div class="program previews open" id="program_preview">
           <h2>Get a better idea what a Lyrn lesson looks like.</h2>
           <h4>Choose a section you want to work the most on</h4>
           
@@ -287,11 +291,12 @@
                 <li>Focus on one section or sign up for multiple</li>
               </ul>
               <h4 class="start">GET STARTED TODAY!</h4>
-              <button class="select">
-                <a href="tel:+13853000906">
+              <button class="select" onclick="createAnalyticsEvent({eventID: 'englishPreviewScheduleClicked'})">
+                <!-- <a href="tel:+13853000906">
                   <p>Call to sign up</p>
                   <p>(385) 300-0906</p>
-                </a>
+                </a> -->
+                <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/duncanmorais/english-preview?hide_gdpr_banner=1&primary_color=27c03a'});return false;"><p>Schedule Now</p></a>
               </button>
             </div>
 
@@ -312,11 +317,12 @@
                 <li>Focus on one section or sign up for multiple</li>
               </ul>
               <h4 class="start">GET STARTED TODAY!</h4>
-              <button class="select">
-                <a href="tel:+13853000906">
+              <button class="select" onclick="createAnalyticsEvent({eventID: 'mathPreviewScheduleClicked'})">
+                <!-- <a href="tel:+13853000906">
                   <p>Call to sign up</p>
                   <p>(385) 300-0906</p>
-                </a>
+                </a> -->
+                <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/duncanmorais/math-preview?hide_gdpr_banner=1&primary_color=27c03a'});return false;"><p>Schedule Now</p></a>
               </button>
             </div>
 
@@ -337,11 +343,12 @@
                 <li>Focus on one section or sign up for multiple</li>
               </ul>
               <h4 class="start">GET STARTED TODAY!</h4>
-              <button class="select">
-                <a href="tel:+13853000906">
+              <button class="select" onclick="createAnalyticsEvent({eventID: 'readingPreviewScheduleClicked'})">
+                <!-- <a href="tel:+13853000906">
                   <p>Call to sign up</p>
                   <p>(385) 300-0906</p>
-                </a>
+                </a> -->
+                <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/duncanmorais/reading-preview?hide_gdpr_banner=1&primary_color=27c03a'});return false;"><p>Schedule Now</p></a>
               </button>
             </div>
 
@@ -362,11 +369,12 @@
                 <li>Focus on one section or sign up for multiple</li>
               </ul>
               <h4 class="start">GET STARTED TODAY!</h4>
-              <button class="select">
-                <a href="tel:+13853000906">
+              <button class="select" onclick="createAnalyticsEvent({eventID: 'sciencePreviewScheduleClicked'})">
+                <!-- <a href="tel:+13853000906">
                   <p>Call to sign up</p>
                   <p>(385) 300-0906</p>
-                </a>
+                </a> -->
+                <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/duncanmorais/science-preview?hide_gdpr_banner=1&primary_color=27c03a'});return false;"><p>Schedule Now</p></a>
               </button>
             </div>
           </div>
