--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
       gtag('config', 'AW-10828068158');
     </script>
 
+    <script src="Site Templates/generalFunctions.js" defer></script>
     <script src="index.js" defer></script>
 
     <script src="Site Templates/formatting.js" defer></script>
