--- a/public/why.html
+++ b/public/why.html
@@ -25,6 +25,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js" defer></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-functions.js" defer></script>
 
+    <script src="Site Templates/generalFunctions.js" defer></script>
     <script src="why.js" defer></script>
 
     <link href="why.css" rel="stylesheet">
