--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -357,8 +357,14 @@
                     <button id = 'assign' onclick = "assignHomework()" class='item itemB2 cursor'>
                         Assign homework
                     </button>
-                    <button id = 'unassign' onclick = "unassignHomework()" class = 'item itemB2 cursor hidden'>
+                    <!-- <button id = 'unassign' onclick = "unassignHomework()" class = 'item itemB2 cursor hidden'>
                         Unassign homework
+                    </button> -->
+                    <button id = 'unassign' class = 'item itemB2 cursor hidden'>
+                        Homework Assigned
+                    </button>
+                    <button id = 'testTaker' onclick = "goToTestTaker()" class = 'item itemB2 cursor'>
+                        Test Taker
                     </button>
                 </div>
             </div>
