intersectrion observer analytics

--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
 
     <!-- start main -->
     <main>
-      <section class="hero">
+      <section class="hero" id="heroSection">
         <div class="hero__background">
           <!-- center -->
           <div class="background-item noselect">Advanced Trig</div>
@@ -215,7 +215,7 @@
         </div>
       </section> -->
 
-      <section class="questionnaire">
+      <section class="questionnaire" id="questionnaireSection">
         <div class="progress">
           <p><span id="progress_number">1</span> out of 6</p>
           <div class="bar-wrapper">
@@ -336,7 +336,7 @@
         </div>
       </section>
   
-      <section class="method">
+      <section class="method" id="methodSection">
         <h5 class="title">The Lyrn Method</h5>
         <h2 class="subtitle">Adaptively Intelligent Courses</h3>
         <p class="description">
@@ -347,7 +347,7 @@
         <img src="Images/Lyrn_method_section_image.png" alt="Example course load">
       </section>
   
-      <section class="tutors">
+      <section class="tutors" id="tutorSection">
         <h5 class="title">Lyrn Tutors</h5>
         <h2 class="subtitle">Qualified in each section</h2>
         <p class="description">All of our tutors have been certified to teach the ACT and have gone through our rigoruous qualification process.
@@ -416,7 +416,7 @@
 
       <!-- <section class="topics"></section> -->
 
-      <section class="about">
+      <section class="about" id="aboutSection">
         <h2>How can we help?</h2>
         <div class="about-details">
           <div class="details">
@@ -462,7 +462,7 @@
         </div>
       </section>
    
-      <section class="contact" id="contact">
+      <section class="contact" id="contactSection">
         <div class="filter"></div>
         <div class="contact__intro">
           <h2>Next Steps</h2>
