no more assignments just test taker

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -354,13 +354,16 @@
                     <button id = 'submitSession' onclick = "submitSession()" class='item itemB2 cursor' style="display: none;">
                         Submit Session
                     </button>
-                    <button id = 'assign' onclick = "assignHomework()" class='item itemB2 cursor'>
+                    <!-- <button id = 'assign' onclick = "assignHomework()" class='item itemB2 cursor hidden'>
+                        Assign homework
+                    </button> -->
+                    <button id = 'assign' class='item itemB2 cursor hidden' style="display: none;">
                         Assign homework
                     </button>
                     <!-- <button id = 'unassign' onclick = "unassignHomework()" class = 'item itemB2 cursor hidden'>
                         Unassign homework
                     </button> -->
-                    <button id = 'unassign' class = 'item itemB2 cursor hidden'>
+                    <button id = 'unassign' class = 'item itemB2 cursor hidden' style="display: none;">
                         Homework Assigned
                     </button>
                     <button id = 'testTaker' onclick = "goToTestTaker()" class = 'item itemB2 cursor'>
