--- a/public/Dashboard/Tutor.html
+++ b/public/Dashboard/Tutor.html
@@ -54,6 +54,7 @@
           <h2 id="tutor-name"></h2>
         </div>
         <button class="button" id="exampleDailyLog">Example Daily Log</button>
+        <button class="button" id="testTaker">My Test Taker</button>
         <button class="button" onclick="signOut()">Sign Out</button>
       </div>
       <!-- <div class="input-row">
