--- a/public/customer-dashboard.html
+++ b/public/customer-dashboard.html
@@ -48,12 +48,12 @@
           </svg>
         </a>
         <div class="links">
-          <a href="#">Student Info</a>
-          <a href="#">Parent Info</a>
-          <a href="#">New Program</a>
-          <a href="#">Daily Log</a>
-          <a href="#">Test Taker</a>
-          <a href="#">Payments</a>
+          <a href="new-student.html" data-query="student">Student Info</a>
+          <a href="new-parent.html" data-query="parent">Parent Info</a>
+          <a href="act-sign-up.html" data-query="student,parent">New Program</a>
+          <a href="/Forms/ACT Daily Log/Daily Log.html" data-query="student">Daily Log</a>
+          <a href="test-taker.html" data-query="student">Test Taker</a>
+          <a href="payment.html" data-query="parent">Payments</a>
         </div>
       </nav>
       <main>
