classes can be submitted

--- a/public/act-sign-up.html
+++ b/public/act-sign-up.html
@@ -220,6 +220,9 @@
     <main id="actClasses">
       <section class="programs">
         <div id="programWrapper_classes" class="program-wrapper"></div>
+        <section class="submit-section">
+          <button class="submit" onclick="verifyClass()">Submit</button>
+        </section>
     </main>
     <main id="programPreviews">
       <h1>TESTING PROGRAM PREVIEWS</h1>
