new calendly links

--- a/email-templates/program-update.html
+++ b/email-templates/program-update.html
@@ -19,7 +19,7 @@
     <table role="presentation" border="0" width="100%" cellspacing="0">
       <tr>
         <td bgcolor="white" align="center" style="color: #7a7a7a;">
-          <h1 style="margin: 5px; font-size: 48px;">+6</h1>
+          <h1 style="margin: 5px; font-size: 48px;">+7</h1>
           <p style="margin: 0; font-size: 24px;">Composite</p>
         </td>
       </tr>
@@ -27,7 +27,7 @@
     <table role="presentation" border="0" align="center" cellspacing="20px">
       <tr>
         <td bgcolor="white" align="center" style="color: #EA5A59;">
-          <h1 style="margin: 5px; font-size: 48px;">+3</h1>
+          <h1 style="margin: 5px; font-size: 48px;">+1</h1>
           <p style="margin: 0; font-size: 24px;">English</p>
         </td>
         <td bgcolor="white" align="center" style="color: #54C6FB;">
@@ -35,11 +35,11 @@
           <p style="margin: 0; font-size: 24px;">Math</p>
         </td>
         <td bgcolor="white" align="center" style="color: #8786FC;">
-          <h1 style="margin: 5px; font-size: 48px;">+6</h1>
+          <h1 style="margin: 5px; font-size: 48px;">+12</h1>
           <p style="margin: 0; font-size: 24px;">Reading</p>
         </td>
         <td bgcolor="white" align="center" style="color: #64C13D;">
-          <h1 style="margin: 5px; font-size: 48px;">+10</h1>
+          <h1 style="margin: 5px; font-size: 48px;">+11</h1>
           <p style="margin: 0; font-size: 24px;">Science</p>
         </td>
       </tr>
@@ -52,21 +52,21 @@
             Hi Olivia,
           </p>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            We just completed the first 2 weeks of Daren's program. He has been doing great! Above is a breakdown of how his scores have been improving.
-            We can't wait to see how much more he can improve over the next 6 weeks of his program! All of his tutors have reported that he is 
-            doing very well and they all have enjoyed meeting with him. We hope things have been going well for you and Daren and that his sessions 
-            have been smooth for both of you. Please let us know if there is anything we can do to make your experience even better.
+            We are half way through Daren's program! He has been doing great and is continuing to make improvements in his scores! We wanted to let you know
+            that we are moving his homework from PDFs to our custom test taker. This should make it easier for Daren to do his homework and will allow him to immediately see his results. 
+            Let us know if he is having any troubles taking these tests and we will gladly help out.
           </p>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            We want to remind you that registration for the July ACT test is coming up. This is the test that Daren should take immediately after his program for the best results.
-            The deadline is June 17th. Below is the link to the ACT website so you can register. Let us know if you need any help with the registration process
-            and we would gladly help you with this.
+            It has been a pleasure working with you and Daren. Our goal is to help as many students as possible reach their dream schools and get the scholarships they deserve.
+            That is why we would love to offer your friends and family a deal with our programs! If anyone signs up for our programs and says that you or Daren referred them, 
+            we will give them 5% off their program and give you 5% of their program cost as well. It's our way of saying thank you for helping us reach our vision. Let us 
+            know if you have any questions, and we can't wait to see how far Daren will go!
           </p>
         </td> 
       </tr>
     </table>
 
-    <table role="presentation" border="0" width="100%" cellspacing="0" style="margin:0 0 24px 0;">
+    <!-- <table role="presentation" border="0" width="100%" cellspacing="0" style="margin:0 0 24px 0;">
       <tr>
         <td align="center">
           <table role="presentation" align="center" border="0" cellspacing="0">
@@ -76,6 +76,27 @@
               </td>
             </tr>
           </table>
+        </td>
+      </tr>
+    </table> -->
+
+    <table style = 'margin-bottom: 2em'>
+      <tr>
+        <td>
+          <img src = 'https://firebasestorage.googleapis.com/v0/b/lyrn-web-app.appspot.com/o/Images%2FHeadshots%2Fduncan_headshot.jpeg?alt=media&token=14a41ce2-d622-4d0f-b0b3-f10b851aabf7' style = 'border-radius: 50%; height: 144px; aspect-ratio: 1/1'>
+        </td>
+        <td>
+          <div style = 'margin-left: 1em'>
+          <p style = 'margin: 0px 0px 0px 0px; font-weight: bold; font-size: 20px'>
+            Duncan Morais
+          </p>
+          <p style = 'margin: 0.5em 0px 0px 0px'>
+          <a href="tel:+13853000906" style="text-decoration: underline; font-weight: bold; color: #253342;">(385) 300-0906</a>
+          </p>
+          <p style = 'margin: 0.5em 0px 0px 0px'>
+            <a href = 'https://lyrnwithus.com' style="text-decoration: underline; font-weight: bold; color: #27c03a;">lyrnwithus.com</a>
+          </p>
+          </div>
         </td>
       </tr>
     </table>
