--- a/email-templates/act-lesson-series/lesson-3.html
+++ b/email-templates/act-lesson-series/lesson-3.html
@@ -39,7 +39,7 @@
             <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
               Even now, after more than fifty Strawberry Moons, finding a patch of wild strawberries still touches me with a sensation of surprise, a feeling 
               of unworthiness and gratitude for the generosity and kindness that comes with an unexpected gift all wrapped in red and green. "Really? For me? 
-              Oh, you shouldn't have." After fifty years they still raise the question of how to respond to their generosity. Sometimes if feels like a silly 
+              Oh, you shouldn't have." After fifty years they still raise the question of how to respond to their generosity. Sometimes it feels like a silly 
               question with a very simple answer: eat them.
             </p>
             <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;">
