another email template

--- a/email-templates/act-lesson-series/lesson-5.html
+++ b/email-templates/act-lesson-series/lesson-5.html
@@ -56,7 +56,7 @@
             </p>
           </div>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            We know that this is a simplicity question because the the four answer choices state basically the same thing. Additionally, there is verbose language and 
+            We know that this is a simplicity question because the four answer choices state basically the same thing. Additionally, there is verbose language and 
             needless repetition. In A, to win a vote has the same meaning as being elected, thus, it has redundancy within the answer choice. Redundancy is always bad 
             and can be eliminated. Just like A, B and C both mention being voted for and being elected within their answer choices; therefore, they can both be removed. 
             That leaves us with D as the correct answer since it is the simplest way to state the information without any repetition.
